--- a/dciy.toml
+++ b/dciy.toml
@@ -1,3 +1,3 @@
 [dciy.commands]
-prepare = "cd ../config && mv database.yml.sample database.yml"
+prepare = ["cd ../config && mv database.yml.sample database.yml"]
 cibuild = ["script/cibuild"]
